--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>City Background</title>
+		<title>CitiPix</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
